--- a/Billed-app-FR-Front-main/package.json
+++ b/Billed-app-FR-Front-main/package.json
@@ -16,14 +16,15 @@
       "!**/lcov-report/**"
     ]
   },
- 
   "dependencies": {
+    "@babel/core": "^7.26.0",
     "express": "^4.17.1",
     "global": "^4.4.0",
     "jquery": "^3.5.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.10.4",
     "@testing-library/dom": "^7.20.0",
     "@testing-library/jest-dom": "^5.11.0",
